Bug 369599 - "[Linux] Combo box with container visible only on hover disappears when hovering its dropdown" [p=kinetik@flim.org (Matthew Gregan) r+sr=roc a1.9=beltzner]